--- a/compose/index.html
+++ b/compose/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Compose / IMSB.APP</title>
+    <title>Compose / Phanpy</title>
     <meta name="color-scheme" content="dark light" />
     <meta name="google" content="notranslate" />
-    <script type="module" crossorigin src="../assets/compose-ab0178da.js"></script>
-    <link rel="modulepreload" crossorigin href="../assets/vendor-9f4c0ba7.js">
-    <link rel="modulepreload" crossorigin href="../assets/useTitle-6fc876ed.js">
-    <link rel="stylesheet" href="../assets/useTitle-bbb67754.css">
+    <script type="module" crossorigin src="../assets/compose-33e65a50.js"></script>
+    <link rel="modulepreload" crossorigin href="../assets/vendor-35585bf7.js">
+    <link rel="modulepreload" crossorigin href="../assets/useTitle-eda89cd2.js">
+    <link rel="stylesheet" href="../assets/useTitle-1f6d8dba.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app-standalone"></div>
