--- a/compose/index.html
+++ b/compose/index.html
@@ -7,10 +7,10 @@
     <title>Compose / IMSB.APP</title>
     <meta name="color-scheme" content="dark light" />
     <meta name="google" content="notranslate" />
-    <script type="module" crossorigin src="../assets/compose-gwKIL0m3.js"></script>
-    <link rel="modulepreload" crossorigin href="../assets/vendor-5BmDqJRl.js">
-    <link rel="modulepreload" crossorigin href="../assets/useTitle-lccZzNr3.js">
-    <link rel="stylesheet" crossorigin href="../assets/useTitle-KJGpPrYb.css">
+    <script type="module" crossorigin src="../assets/compose-Ei8tMmvK.js"></script>
+    <link rel="modulepreload" crossorigin href="../assets/vendor-3GYfG0Gs.js">
+    <link rel="modulepreload" crossorigin href="../assets/useTitle-D1JLwGoE.js">
+    <link rel="stylesheet" crossorigin href="../assets/useTitle-UNH24Bfk.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app-standalone"></div>
