--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       content="Minimalistic opinionated Mastodon web client"
     />
     <meta property="og:image" content="https://app.imsb.app/og-image-2.jpg" />
-    <script type="module" crossorigin src="./assets/main-nMmNKH-N.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/vendor-5BmDqJRl.js">
-    <link rel="modulepreload" crossorigin href="./assets/useTitle-lccZzNr3.js">
-    <link rel="stylesheet" crossorigin href="./assets/useTitle-KJGpPrYb.css">
-    <link rel="stylesheet" crossorigin href="./assets/main-nEWh9Hem.css">
+    <script type="module" crossorigin src="./assets/main-0SO6PBuZ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/vendor-3GYfG0Gs.js">
+    <link rel="modulepreload" crossorigin href="./assets/useTitle-D1JLwGoE.js">
+    <link rel="stylesheet" crossorigin href="./assets/useTitle-UNH24Bfk.css">
+    <link rel="stylesheet" crossorigin href="./assets/main-sLjhmgg0.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app"></div>
