--- a/compose/index.html
+++ b/compose/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Compose / IMSB.APP</title>
+    <title>Compose / IMSB</title>
     <meta name="color-scheme" content="dark light" />
     <meta name="google" content="notranslate" />
-    <script type="module" crossorigin src="../assets/compose-Ei8tMmvK.js"></script>
-    <link rel="modulepreload" crossorigin href="../assets/vendor-3GYfG0Gs.js">
-    <link rel="modulepreload" crossorigin href="../assets/useTitle-D1JLwGoE.js">
-    <link rel="stylesheet" crossorigin href="../assets/useTitle-UNH24Bfk.css">
+    <script type="module" crossorigin src="../assets/compose-HmhvhV23.js"></script>
+    <link rel="modulepreload" crossorigin href="../assets/vendor-JBAYXPKx.js">
+    <link rel="modulepreload" crossorigin href="../assets/useTitle-BXE3MrBa.js">
+    <link rel="stylesheet" crossorigin href="../assets/useTitle-MzfWQQJz.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app-standalone"></div>
