--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>IMSB.APP</title>
+    <title>IMSB</title>
     <meta
       name="description"
       content="Minimalistic opinionated Mastodon web client"
@@ -14,18 +14,31 @@
     <meta name="color-scheme" content="dark light" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="IMSB.APP" />
+    <meta name="apple-mobile-web-app-title" content="IMSB" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="canonical" href="https://app.imsb.app" />
     <meta
+      name=""
+      data-theme-setting="manual"
+      content="#242526"
+      data-theme-light-color="#fff"
+      data-theme-light-color-temp="#ffff"
+      data-theme-dark-color="#242526"
+      data-theme-dark-color-temp="#242526ff"
+    />
+    <meta
       name="theme-color"
+      data-theme-setting="auto"
       content="#fff"
+      data-content-temp="#ffff"
       media="(prefers-color-scheme: light)"
     />
     <meta
       name="theme-color"
+      data-theme-setting="auto"
       content="#242526"
+      data-content-temp="#242526ff"
       media="(prefers-color-scheme: dark)"
     />
     <meta name="google" content="notranslate" />
@@ -34,17 +47,17 @@
     <!-- Metacrap https://broken-links.com/2015/12/01/little-less-metacrap/ -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="og:url" content="https://app.imsb.app" />
-    <meta property="og:title" content="IMSB.APP" />
+    <meta property="og:title" content="IMSB" />
     <meta
       property="og:description"
       content="Minimalistic opinionated Mastodon web client"
     />
     <meta property="og:image" content="https://app.imsb.app/og-image-2.jpg" />
-    <script type="module" crossorigin src="./assets/main-0SO6PBuZ.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/vendor-3GYfG0Gs.js">
-    <link rel="modulepreload" crossorigin href="./assets/useTitle-D1JLwGoE.js">
-    <link rel="stylesheet" crossorigin href="./assets/useTitle-UNH24Bfk.css">
-    <link rel="stylesheet" crossorigin href="./assets/main-sLjhmgg0.css">
+    <script type="module" crossorigin src="./assets/main-BOQn4ppN.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/vendor-JBAYXPKx.js">
+    <link rel="modulepreload" crossorigin href="./assets/useTitle-BXE3MrBa.js">
+    <link rel="stylesheet" crossorigin href="./assets/useTitle-MzfWQQJz.css">
+    <link rel="stylesheet" crossorigin href="./assets/main-z8Du0Ndi.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app"></div>
