--- a/compose/index.html
+++ b/compose/index.html
@@ -7,10 +7,10 @@
     <title>Compose / IMSB</title>
     <meta name="color-scheme" content="dark light" />
     <meta name="google" content="notranslate" />
-    <script type="module" crossorigin src="../assets/compose-HmhvhV23.js"></script>
-    <link rel="modulepreload" crossorigin href="../assets/vendor-JBAYXPKx.js">
-    <link rel="modulepreload" crossorigin href="../assets/useTitle-BXE3MrBa.js">
-    <link rel="stylesheet" crossorigin href="../assets/useTitle-MzfWQQJz.css">
+    <script type="module" crossorigin src="../assets/compose-z7bupGIQ.js"></script>
+    <link rel="modulepreload" crossorigin href="../assets/vendor-Z33qxHCv.js">
+    <link rel="modulepreload" crossorigin href="../assets/useTitle-9_VtOyix.js">
+    <link rel="stylesheet" crossorigin href="../assets/useTitle-gZMJzlpS.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app-standalone"></div>
