--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
       name="theme-color"
       data-theme-setting="auto"
       content="#fff"
-      data-content-temp="#ffff"
+      data-content="#fff"
+      data-content-temp="#fffa"
       media="(prefers-color-scheme: light)"
     />
     <meta
       name="theme-color"
       data-theme-setting="auto"
       content="#242526"
-      data-content-temp="#242526ff"
+      data-content="#242526"
+      data-content-temp="#242526aa"
       media="(prefers-color-scheme: dark)"
     />
     <meta name="google" content="notranslate" />
@@ -53,11 +55,11 @@
       content="Minimalistic opinionated Mastodon web client"
     />
     <meta property="og:image" content="https://app.imsb.app/og-image-2.jpg" />
-    <script type="module" crossorigin src="./assets/main-BOQn4ppN.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/vendor-JBAYXPKx.js">
-    <link rel="modulepreload" crossorigin href="./assets/useTitle-BXE3MrBa.js">
-    <link rel="stylesheet" crossorigin href="./assets/useTitle-MzfWQQJz.css">
-    <link rel="stylesheet" crossorigin href="./assets/main-z8Du0Ndi.css">
+    <script type="module" crossorigin src="./assets/main-jm7mRiQe.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/vendor-Z33qxHCv.js">
+    <link rel="modulepreload" crossorigin href="./assets/useTitle-9_VtOyix.js">
+    <link rel="stylesheet" crossorigin href="./assets/useTitle-gZMJzlpS.css">
+    <link rel="stylesheet" crossorigin href="./assets/main-nthmbLgc.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app"></div>
