--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       content="Minimalistic opinionated Mastodon web client"
     />
     <meta property="og:image" content="https://app.imsb.app/og-image-2.jpg" />
-    <script type="module" crossorigin src="./assets/main-jm7mRiQe.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/vendor-Z33qxHCv.js">
-    <link rel="modulepreload" crossorigin href="./assets/useTitle-9_VtOyix.js">
-    <link rel="stylesheet" crossorigin href="./assets/useTitle-gZMJzlpS.css">
-    <link rel="stylesheet" crossorigin href="./assets/main-nthmbLgc.css">
+    <script type="module" crossorigin src="./assets/main-dyjmA1f7.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/vendor-ygncGLEO.js">
+    <link rel="modulepreload" crossorigin href="./assets/useTitle-tYrc2SF5.js">
+    <link rel="stylesheet" crossorigin href="./assets/useTitle-DwHZ0YGg.css">
+    <link rel="stylesheet" crossorigin href="./assets/main-TtcS0ZlI.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app"></div>
