--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       content="Minimalistic opinionated Mastodon web client"
     />
     <meta property="og:image" content="https://app.imsb.app/og-image-2.jpg" />
-    <script type="module" crossorigin src="./assets/main-vBCM9ak_.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/vendor-n7HZXGTm.js">
-    <link rel="modulepreload" crossorigin href="./assets/useTitle-g9A4b_Rx.js">
-    <link rel="stylesheet" crossorigin href="./assets/useTitle-Ew_xmPGs.css">
-    <link rel="stylesheet" crossorigin href="./assets/main-T2OykzNZ.css">
+    <script type="module" crossorigin src="./assets/main-O9K3Tg_5.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/vendor-kNA8PQwc.js">
+    <link rel="modulepreload" crossorigin href="./assets/useTitle-UYZx9-4N.js">
+    <link rel="stylesheet" crossorigin href="./assets/useTitle-Wtx90Uph.css">
+    <link rel="stylesheet" crossorigin href="./assets/main-iO4LbAEj.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app"></div>
