--- a/compose/index.html
+++ b/compose/index.html
@@ -7,10 +7,10 @@
     <title>Compose / IMSB</title>
     <meta name="color-scheme" content="dark light" />
     <meta name="google" content="notranslate" />
-    <script type="module" crossorigin src="../assets/compose-sTWSFVJL.js"></script>
-    <link rel="modulepreload" crossorigin href="../assets/vendor-n7HZXGTm.js">
-    <link rel="modulepreload" crossorigin href="../assets/useTitle-g9A4b_Rx.js">
-    <link rel="stylesheet" crossorigin href="../assets/useTitle-Ew_xmPGs.css">
+    <script type="module" crossorigin src="../assets/compose-zIB6i82P.js"></script>
+    <link rel="modulepreload" crossorigin href="../assets/vendor-kNA8PQwc.js">
+    <link rel="modulepreload" crossorigin href="../assets/useTitle-UYZx9-4N.js">
+    <link rel="stylesheet" crossorigin href="../assets/useTitle-Wtx90Uph.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
     <div id="app-standalone"></div>
