--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       content="Minimalistic opinionated Mastodon web client"
     />
     <meta property="og:image" content="https://app.imsb.app/og-image-2.jpg" />
-    <script type="module" crossorigin src="./assets/main-ZBH8HW2a.js"></script>
+    <script type="module" crossorigin src="./assets/main-Vzj9HD3z.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/intl-segmenter-polyfill-XHDQHdV5.js">
-    <link rel="modulepreload" crossorigin href="./assets/db-H4FxwlS-.js">
-    <link rel="stylesheet" crossorigin href="./assets/db-XRzP4u6M.css">
+    <link rel="modulepreload" crossorigin href="./assets/db-_BHtpnAi.js">
+    <link rel="stylesheet" crossorigin href="./assets/db-uX-9b679.css">
     <link rel="stylesheet" crossorigin href="./assets/main-iSkZk3_J.css">
   <link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
   <body>
